k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: verhalenbank
  namespace: verhalenbank
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
  - host: www.verhalenbank.nl
    http:
      paths:
      - backend:
          serviceName: verhalenbank
          servicePort: 80
